[metadata]
name = oslo.messaging-check-tool
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    oslo_msg_check

[entry_points]
console_scripts =
    oslo_msg_check_client = oslo_msg_check.client_app:main
    oslo_msg_check_server = oslo_msg_check.server_app:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_msg_check/locale
domain = oslo.messaging-check-tool

[update_catalog]
domain = oslo.messaging-check-tool
output_dir = oslo_msg_check/locale
input_file = oslo_msg_check/locale/oslo.messaging-check-tool.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_msg_check/locale/oslo.messaging-check-tool.pot
